# Hybrid-Stochastic-Reflections

./: .gitignore  .gitlab-ci.yml  .gitmodules  HSRSample_DX12.bat  README.md
sample/: CMakeLists.txt
sample/src/Common/: config.json
sample/src/DX12/: CMakeLists.txt
sample/src/DX12/Sources/: BlueNoiseSampler.cpp  BlueNoiseSampler.h  BufferDX12.cpp  BufferDX12.h  GltfPbrPass.cpp  GltfPbrPass.h  HSR.cpp  HSR.h  HSRSample.cpp  HSRSample.h  SampleRenderer.cpp  SampleRenderer.h  UploadHeapBuffersDX12.cpp  UploadHeapBuffersDX12.h  Utils.cpp  Utils.h  stdafx.h
sample/src/Shaders/: Accumulate.hlsl  ApplyDecals.hlsl  ApplyReflections.hlsl  Atmosphere.h  ClassifyTiles.hlsl  Common.hlsl  Declarations.h  DepthDownsample.hlsl  Descriptors.h  DownsampleAtmosphere.hlsl  DrawAtmosphere.hlsl  GLTFPBRLighting.hlsl  GLTFPbrPass-PS.hlsl  GLTFVertexFactory.hlsl  GenerateAtmosphereLUT.hlsl  HalfResGbuffer.hlsl  Intersect.hlsl  Prefilter.hlsl  PrepareIndirectArgs.hlsl  PrimaryRayTracing.hlsl  RTShading.h  Reproject.hlsl  SkinForBLAS.hlsl  TemporalAccumulation.hlsl  shadowFiltering.h
